# jevonalarmclock

./: README.md
2.AlarmClockSoftware/: .cproject  .gitignore  .project  AlarmClock.c  AlarmClock.h  AlarmClockImage.h  Buttons.c  GUI_Thread.c  GuiThread.c  JevonAlarmClock.uvguix.jeroen  JevonAlarmClock.uvoptx  JevonAlarmClock.uvprojx  LightState.h  MainDialog.c  MainThread.c  PwmOutput.c  PwmOutput.h  RTC.c  RTC.h  Timers.c  UART_Thread.c  UartThread.c  main.c  main.h
2.AlarmClockSoftware/Listings/: JevonAlarmClock.map  JevonAlarmClock2.map  startup_stm32f429xx.lst
2.AlarmClockSoftware/RTE/: RTE_Components.h
2.AlarmClockSoftware/RTE/CMSIS/: RTX_Conf_CM.c
2.AlarmClockSoftware/RTE/Device/STM32F429ZITx/: RTE_Device.h  stm32f4xx_hal_conf.h  system_stm32f4xx.c
2.AlarmClockSoftware/RTE/Graphics/: GUIConf.c
2.AlarmClockSoftware/RTE/Graphics_Display/STM32F429ZITx/: LCDConf.c
2.AlarmClockSoftware/RTE/Network/: lwipopts.h
3.GatewaySoftware/: CMakeLists.txt  LICENSE  README.md  build.sh  downloadexternal.sh  doxygen.sh  test.sh
3.GatewaySoftware/config/: config.dtd  config.xml
3.GatewaySoftware/doc/: Doxyfile  mainpage.md  messaging.md
3.GatewaySoftware/include/: Main.h
3.GatewaySoftware/include/http/: HueClient.h
3.GatewaySoftware/include/serialport/: IoService.h  IoServiceProvider.h  RequestHandler.h  SerialPort.h
3.GatewaySoftware/include/time/: Time.h
3.GatewaySoftware/include/util/: Util.h
3.GatewaySoftware/nbproject/: configurations.xml  project.xml
3.GatewaySoftware/nbproject/private/: Default.properties  configurations.xml  private.xml
3.GatewaySoftware/src/: CMakeLists.txt  Main.cpp
3.GatewaySoftware/src/http/: HueClient.cpp
3.GatewaySoftware/src/serialport/: IoServiceProvider.cpp  SerialPort.cpp
3.GatewaySoftware/src/time/: Time.cpp
3.GatewaySoftware/test/: CMakeLists.txt  TestServer.cpp
